# trade5

./: .gitignore  README.md  requirements.txt  streamlit_app.py
TradePrecision/: .replit  advanced_trading_algorithms.py  algorithm_usage_example.py  app.py  crypto_data.py  market_analyzer.py  market_sentiment.py  pyproject.toml  server.py  signal_generator.py  signal_integration.py  signal_validator.py  technical_indicators.py  utils.py
TradePrecision/attached_assets/: app.py  crypto_data.py  performance_data.json  performance_tracker.py  pyproject.toml  signal_generator.py  technical_indicators.py  visualization.py
